# vesuvius

./: .gitignore  LICENSE  MANIFEST.in  README.md  setup.cfg  setup.py
notebooks/: example1_data_access.ipynb  example2_cubes_bootstrap.ipynb  example2_ink_detection.ipynb  example3_cubes_bootstrap.ipynb  example3_ink_detection.ipynb
src/: __init__.py  volume.py
src/configs/: scrolls.yaml
src/vesuvius/: __init__.py  paths.py  volume.py  volume_2.py
src/vesuvius/configs/: cubes.yaml  scraper.yaml  scrolls.yaml
src/vesuvius/paths/: __init__.py  fetcher.py  local.py  parser.py  utils.py
src/vesuvius/setup/: accept_terms.py
vesuvius/: __init__.py
vesuvius/setup/: accept_terms.py
