[metadata]
name = vesuvius
version = 0.1
author = Giorgio Angelotti
author_email = giorgio@scrollprize.org
description = Python library for accessing Vesuvius Challenge data
long_description = file: README.md, LICENSE
long_description_content_type = text/markdown
url = https://github.com/ScrollPrize/vesuvius
project_urls =
    Bug Tracker = https://github.com/ScrollPrize/vesuvius/issues
    repository = https://github.com/ScrollPrize/vesuvius
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8

[options.packages.find]
where = src